@@ -1,0 +1,3 @@
+<div class="t3menu">
+  {$content} &nbsp; &nbsp; [ <span class="title">{$title}</span> ]
+</div>
